2010-06-04  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidMethodWithUnusedGenericTypeRule.cs: Apply AvoidUnnecessarySpecializationRule

2010-05-16  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidDeclaringCustomDelegatesRule.cs:
	* DoNotExposeNestedGenericSignaturesRule.cs:
	* UseGenericEventHandlerRule.cs:
		Apply AvoidRepetitiveCallsToPropertiesRule

2010-01-29  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidMethodWithUnusedGenericTypeRule.cs: Apply AvoidRepetitiveCalls
	ToPropertiesRule on GenericParameter.get_FullName

2010-01-19  Jb Evain  <jbevain@novell.com>

	* AvoidMethodWithUnusedGenericTypeRule.cs: Fix the case where the
	parameter type is a type specification of a generic type, such
	as an array.

2010-01-01  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidDeclaringCustomDelegatesRule.cs: New. Rule to check
	if custom delegates could be replaced with Action/Func for
	.net 2.0 and later
	* Makefile.am: Add new rule and tests to the build

2009-07-03  Jesse Jones  <jesjones@mindspring.com>

	* *Rule.cs: Edited most of the rule descriptions.

2008-12-29  Sebastien Pouliot  <sebastien@ximian.com> 

	* DoNotExposeNestedGenericSignaturesRule.cs: New. Rule to check
	if nested generics are being exposed in visible API.
	* Makefile.am: Add new rule and test to the build.

2008-11-30  Sebastien Pouliot  <sebastien@ximian.com> 

	* AvoidMethodWithUnusedGenericTypeRule.cs: Use HasParameters.
	* PreferGenericsOverRefObjectRule.cs: Use HasGenericParameters.
	* UseGenericEventHandlerRule.cs: Use HasParameters.

2008-11-07  Alan McGovern  <amcgovern@novell.com>

	* Makefile.am:
	* Gendarme.Rules.Design.Generic.mdp:
	* Gendarme.Rules.Design.Generic.csproj: Activate makefile integration
	for all the rules projects. Remove the old mdp files as they are no
	longer needed.

2008-10-26  Sebastien Pouliot  <sebastien@ximian.com>

	* PreferGenericsOverRefObjectRule.cs: New. Rule that check method