@@ -1,3 +1,7 @@
+2010-06-10  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* AvoidMethodWithUnusedGenericTypeTest.cs: Add asserts for severity
+
 2010-01-19  Jb Evain  <jbevain@novell.com>
 
 	* AvoidMethodWithUnusedGenericTypeTest.cs: add test for the case
